maxPoint added and DB query optimised